--- a/DeviceTracker/Info.plist
+++ b/DeviceTracker/Info.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>bluetooth-central</string>
 		<string>bluetooth-peripheral</string>
+		<string>location</string>
 	</array>
 	<key>UILaunchScreen</key>
 	<dict>
